--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
 # port
 server.port=8081
 
+# data source
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:quotation
+spring.datasource.username=sa
+spring.datasource.password=
+
 # jpa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+# h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
