--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-spring</artifactId>
@@ -108,6 +108,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>quotation-management</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
