--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,20 +1,16 @@
 # port
-server.port=8081
+server.port=${PORT}
 
 # data source
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bootdb
+spring.datasource.url=jdbc:mysql://${MYSQL_CONTAINER}:3306/bootdb?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 
-# jpa
+#jpa
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.format_sql=true
 
-# h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+stock-manager.url=http://${STOCK_MANAGER_CONTAINER}:8080
 
-stock-manager.url=http://localhost:8080
