--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,3 +11,4 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+stock-manager.url=http://localhost:8080
